# AgentRob

./: .env.example  .gitignore  README.md  agentrob-prompt.md  index.html  package-lock.json  package.json
backend/: .env.example  Makefile  README.md  pyproject.toml  test.http
backend/app/: main.py  models.py  store.py
backend/app/services/: azure_voice_live.py  personal_voice_tts.py
src/: main.js  styles.css
src/components/: App.js  Card.js  Filter.js  Grid.js
src/data/: data.json
src/utils/: constants.js  formatters.js  icons.js
