[project]
name = "agentrob-backend"
version = "0.1.0"
description = "AgentRob FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.10.6",
  "python-dotenv==1.0.1",
  "azure-identity>=1.15.0",
  "azure-cognitiveservices-speech>=1.40.0",
  "httpx==0.27.2",
  "aiohttp==3.10.10",
  "websockets==13.1",
  "anyio>=4.6.2",
  "ruff==0.9.3",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
